[workspace]
members = [".", "package-managers", "package-manager-derive"]

[package]
name = "iwant"
version = "0.3.1"
authors = ["Collide <three-dim-sky@foxmail.com>"]
edition = "2021"
description = "Install applications what I WANT."
repository = "https://github.com/TD-Sky/iwant"
license = "MIT"
keywords = ["package-management"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tabled = { version = "0.14", features = ["color"] }
package-managers = { path = "package-managers" }
toml = "0.8"
parse-display = { version = "0.8", default-features = false }
terminal_size = "0.3"
owo-colors = "3.5"
smol_str = { version = "0.2", features = ["serde"] }

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_complete_nushell = "4.4"
smol_str = { version = "0.2" }

[[bin]]
name = "iwant"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dev-dependencies]
smol_str = "0.2"
