[package]
name = "iwant"
version = "0.5.0"
authors = ["Collide <three-dim-sky@foxmail.com>"]
edition = "2021"
description = "Install applications what I WANT."
repository = "https://github.com/TD-Sky/iwant"
license = "MIT"
keywords = ["package-management"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE*", "README.md"]

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tabled = { version = "0.15", features = ["ansi"] }
basic-toml = "0.1"
terminal_size = "0.3"
owo-colors = "4.0"
smol_str = { version = "0.2", features = ["serde"] }

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_complete_nushell = "4.4"
smol_str = { version = "0.2" }

[profile.release]
lto = true
