[package]
name = "iwant"
version = "0.6.1"
authors = ["Collide <three-dim-sky@foxmail.com>"]
edition = "2021"
description = "Install applications what I WANT."
repository = "https://github.com/TD-Sky/iwant"
license = "MIT"
keywords = ["package-management"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE*", "README.md"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
tabled = "0.15"
basic-toml = "0.1"
terminal_size = "0.3"
owo-colors = "4.0"
smol_str = "0.2"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tabled = { workspace = true, features = ["ansi"] }
basic-toml = { workspace = true }
terminal_size = { workspace = true }
owo-colors = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
smol_str = { workspace = true }

[profile.release]
lto = true
